Overhaul Trusts commands & menus, player lookup algorithm